--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,11 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+  - repo: local
+    hooks:
+      - id: run-prettier-locally
+        name: run-prettier-locally
+        entry: bash -c 'npx prettier . --write'
+        language: system
+        # types: [python]
+        pass_filenames: false
